Better workaround of QTBUG-33735

Instead of using std::bind, just replace mapped with map and directly
modify the output.